# ggb

./: .gitignore  README.md  hello.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: gen_site.yml
configs/: config.yaml  config_utils.py
contents/: atom.xml  index.html
contents/blog/: 1.html
demo/: 21.html  index.html
demo/blog/: 21.html  22.html
statics/: article_list.html
templates/: 21.html  article_list.html  articles.html  base.html  blog_content.html  index.html  post.html
templates/default_theme/: about.html  base.html  index.html
templates/static/css/: style.css
tests/: test.ipynb  test.py
