[project]
name = "github_blog"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "geoqiao", email = "realvincentqiao@gmail.com"},
]
dependencies = [
    "jinja2>=3.1.4",
    "feedgen>=1.0.0",
    "marko>=2.1.2",
    "pygithub>=2.4.0",
    "pyyaml>=6.0.2",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
